--- a/test-output/index.html
+++ b/test-output/index.html
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">3 methods,   3 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,12 +104,17 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.stockTests.NewsLetterTest" hash-for-method="getIcon">getIcon</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.stockTests.StockSectorsTest" hash-for-method="conDiscret">conDiscret</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.stockTests.NewsLetterTest" hash-for-method="getnewsLetter">getnewsLetter</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.stockTests.StockSectorsTest" hash-for-method="sectorsText">sectorsText</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                      <span>
+                        <img width="3%" src="passed.png"/>
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.stockTests.StockSectorsTest" hash-for-method="stockSectorsCountOfLinks">stockSectorsCountOfLinks</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -127,21 +132,28 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.stockTests.NewsLetterTest</span>
+              <span class="class-name">com.stockTests.StockSectorsTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="getIcon">
-                  </a> <!-- getIcon -->
-                  <span class="method-name">getIcon</span>
+                  <a name="conDiscret">
+                  </a> <!-- conDiscret -->
+                  <span class="method-name">conDiscret</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="getnewsLetter">
-                  </a> <!-- getnewsLetter -->
-                  <span class="method-name">getnewsLetter</span>
+                  <a name="sectorsText">
+                  </a> <!-- sectorsText -->
+                  <span class="method-name">sectorsText</span>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+              <div class="method">
+                <div class="method-content">
+                  <a name="stockSectorsCountOfLinks">
+                  </a> <!-- stockSectorsCountOfLinks -->
+                  <span class="method-name">stockSectorsCountOfLinks</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -149,7 +161,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/3l/htwgz5n16r5_315x7tq62_s40000gn/T/testng-eclipse-985856737/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/3l/htwgz5n16r5_315x7tq62_s40000gn/T/testng-eclipse-1128737782/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -158,7 +170,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.stockTests.NewsLetterTest&quot;/&gt;
+      &lt;class name=&quot;com.stockTests.StockSectorsTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -198,20 +210,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'getnewsLetter')
-data.setCell(0, 2, 'com.stockTests.NewsLetterTest')
-data.setCell(0, 3, 3587);
+data.setCell(0, 1, 'conDiscret')
+data.setCell(0, 2, 'com.stockTests.StockSectorsTest')
+data.setCell(0, 3, 15078);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'getIcon')
-data.setCell(1, 2, 'com.stockTests.NewsLetterTest')
-data.setCell(1, 3, 1100);
+data.setCell(1, 1, 'stockSectorsCountOfLinks')
+data.setCell(1, 2, 'com.stockTests.StockSectorsTest')
+data.setCell(1, 3, 2256);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'sectorsText')
+data.setCell(2, 2, 'com.stockTests.StockSectorsTest')
+data.setCell(2, 3, 37);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 4 seconds</span>
+              <span class="suite-total-time">Total running time: 17 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -237,22 +253,26 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.stockTests.NewsLetterTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.stockTests.StockSectorsTest</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">getIcon</span>
-                <span class="method-start">7688 ms</span>
+                <span class="method-name">conDiscret</span>
+                <span class="method-start">5027 ms</span>
               </div> <!-- test-method -->
               <div class="test-method">
-                <span class="method-name">getnewsLetter</span>
-                <span class="method-start">8793 ms</span>
+                <span class="method-name">sectorsText</span>
+                <span class="method-start">20107 ms</span>
+              </div> <!-- test-method -->
+              <div class="test-method">
+                <span class="method-name">stockSectorsCountOfLinks</span>
+                <span class="method-start">20145 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">12381 ms</span>
+                <span class="method-start">22403 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
