--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="be6360">  <td>22/09/06 19:11:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewsLetterTest.getIcon()[pri:1, instance:com.stockTests.NewsLetterTest@64485a47]">getIcon</td> 
+<tr bgcolor="be6360">  <td>22/09/07 12:38:32</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="StockSectorsTest.conDiscret()[pri:0, instance:com.stockTests.StockSectorsTest@64485a47]">conDiscret</td> 
   <td>main@508198356</td>   <td></td> </tr>
-<tr bgcolor="be6360">  <td>22/09/06 19:11:24</td>   <td>1105</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewsLetterTest.getnewsLetter()[pri:1, instance:com.stockTests.NewsLetterTest@64485a47]">getnewsLetter</td> 
+<tr bgcolor="be6360">  <td>22/09/07 12:38:47</td>   <td>15080</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="StockSectorsTest.sectorsText()[pri:0, instance:com.stockTests.StockSectorsTest@64485a47]">sectorsText</td> 
   <td>main@508198356</td>   <td></td> </tr>
-<tr bgcolor="6587f1">  <td>22/09/06 19:11:15</td>   <td>-7682</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.stockTests.NewsLetterTest@64485a47]">&gt;&gt;setUp</td> 
+<tr bgcolor="6587f1">  <td>22/09/07 12:38:27</td>   <td>-5023</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.stockTests.StockSectorsTest@64485a47]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@508198356</td>   <td></td> </tr>
-<tr bgcolor="6587f1">  <td>22/09/06 19:11:27</td>   <td>4693</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.stockTests.NewsLetterTest@64485a47]">&lt;&lt;tearDown</td> 
+<tr bgcolor="be6360">  <td>22/09/07 12:38:47</td>   <td>15118</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="StockSectorsTest.stockSectorsCountOfLinks()[pri:0, instance:com.stockTests.StockSectorsTest@64485a47]">stockSectorsCountOfLinks</td> 
+  <td>main@508198356</td>   <td></td> </tr>
+<tr bgcolor="6587f1">  <td>22/09/07 12:38:49</td>   <td>17376</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.stockTests.StockSectorsTest@64485a47]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@508198356</td>   <td></td> </tr>
 </table>
