--- a/test-output/index.html
+++ b/test-output/index.html
@@ -93,7 +93,7 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">3 methods,   3 passed</span>
+                    <span class="method-stats">1 method,   1 passed</span>
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -104,17 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.stockTests.StockSectorsTest" hash-for-method="conDiscret">conDiscret</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.stockTests.StockSectorsTest" hash-for-method="sectorsText">sectorsText</a> <!-- method navigator-link -->
-                      </span>
-                      <br/>
-                      <span>
-                        <img width="3%" src="passed.png"/>
-                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.stockTests.StockSectorsTest" hash-for-method="stockSectorsCountOfLinks">stockSectorsCountOfLinks</a> <!-- method navigator-link -->
+                        <a href="#" class="method navigator-link" panel-name="suite-Default_suite" title="com.stockTests.UserRegistrationTest" hash-for-method="registrationNegativeTest">registrationNegativeTest</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -132,28 +122,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">com.stockTests.StockSectorsTest</span>
+              <span class="class-name">com.stockTests.UserRegistrationTest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="conDiscret">
-                  </a> <!-- conDiscret -->
-                  <span class="method-name">conDiscret</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="sectorsText">
-                  </a> <!-- sectorsText -->
-                  <span class="method-name">sectorsText</span>
-                </div> <!-- method-content -->
-              </div> <!-- method -->
-              <div class="method">
-                <div class="method-content">
-                  <a name="stockSectorsCountOfLinks">
-                  </a> <!-- stockSectorsCountOfLinks -->
-                  <span class="method-name">stockSectorsCountOfLinks</span>
+                  <a name="registrationNegativeTest">
+                  </a> <!-- registrationNegativeTest -->
+                  <span class="method-name">registrationNegativeTest</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -161,7 +137,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">/private/var/folders/3l/htwgz5n16r5_315x7tq62_s40000gn/T/testng-eclipse-1128737782/testng-customsuite.xml</span>
+            <span class="header-content">/private/var/folders/3l/htwgz5n16r5_315x7tq62_s40000gn/T/testng-eclipse-103252939/testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -170,7 +146,7 @@
 &lt;suite guice-stage=&quot;DEVELOPMENT&quot; name=&quot;Default suite&quot;&gt;
   &lt;test thread-count=&quot;5&quot; verbose=&quot;2&quot; name=&quot;Default test&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;com.stockTests.StockSectorsTest&quot;/&gt;
+      &lt;class name=&quot;com.stockTests.UserRegistrationTest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -210,24 +186,16 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(3);
+data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'conDiscret')
-data.setCell(0, 2, 'com.stockTests.StockSectorsTest')
-data.setCell(0, 3, 15078);
-data.setCell(1, 0, 1)
-data.setCell(1, 1, 'stockSectorsCountOfLinks')
-data.setCell(1, 2, 'com.stockTests.StockSectorsTest')
-data.setCell(1, 3, 2256);
-data.setCell(2, 0, 2)
-data.setCell(2, 1, 'sectorsText')
-data.setCell(2, 2, 'com.stockTests.StockSectorsTest')
-data.setCell(2, 3, 37);
+data.setCell(0, 1, 'registrationNegativeTest')
+data.setCell(0, 2, 'com.stockTests.UserRegistrationTest')
+data.setCell(0, 3, 16563);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 17 seconds</span>
+              <span class="suite-total-time">Total running time: 16 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -253,26 +221,18 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">com.stockTests.StockSectorsTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">com.stockTests.UserRegistrationTest</div> <!-- chronological-class-name -->
               <div class="configuration-test before">
                 <span class="method-name">setUp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-test before -->
               <div class="test-method">
-                <span class="method-name">conDiscret</span>
-                <span class="method-start">5027 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">sectorsText</span>
-                <span class="method-start">20107 ms</span>
-              </div> <!-- test-method -->
-              <div class="test-method">
-                <span class="method-name">stockSectorsCountOfLinks</span>
-                <span class="method-start">20145 ms</span>
+                <span class="method-name">registrationNegativeTest</span>
+                <span class="method-start">7954 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-test after">
                 <span class="method-name">tearDown</span>
-                <span class="method-start">22403 ms</span>
+                <span class="method-start">24538 ms</span>
               </div> <!-- configuration-test after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
