--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,14 +1,10 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="6587f1">  <td>22/09/07 12:38:27</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.stockTests.StockSectorsTest@64485a47]">&gt;&gt;setUp</td> 
+<tr bgcolor="6587f1">  <td>22/09/07 17:53:21</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.stockTests.UserRegistrationTest@64485a47]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@508198356</td>   <td></td> </tr>
-<tr bgcolor="be6360">  <td>22/09/07 12:38:47</td>   <td>20141</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="StockSectorsTest.stockSectorsCountOfLinks()[pri:0, instance:com.stockTests.StockSectorsTest@64485a47]">stockSectorsCountOfLinks</td> 
+<tr bgcolor="be6360">  <td>22/09/07 17:53:29</td>   <td>7949</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="UserRegistrationTest.registrationNegativeTest()[pri:0, instance:com.stockTests.UserRegistrationTest@64485a47]">registrationNegativeTest</td> 
   <td>main@508198356</td>   <td></td> </tr>
-<tr bgcolor="be6360">  <td>22/09/07 12:38:47</td>   <td>20103</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="StockSectorsTest.sectorsText()[pri:0, instance:com.stockTests.StockSectorsTest@64485a47]">sectorsText</td> 
-  <td>main@508198356</td>   <td></td> </tr>
-<tr bgcolor="be6360">  <td>22/09/07 12:38:32</td>   <td>5023</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="StockSectorsTest.conDiscret()[pri:0, instance:com.stockTests.StockSectorsTest@64485a47]">conDiscret</td> 
-  <td>main@508198356</td>   <td></td> </tr>
-<tr bgcolor="6587f1">  <td>22/09/07 12:38:49</td>   <td>22399</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.stockTests.StockSectorsTest@64485a47]">&lt;&lt;tearDown</td> 
+<tr bgcolor="6587f1">  <td>22/09/07 17:53:46</td>   <td>24533</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.stockTests.UserRegistrationTest@64485a47]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@508198356</td>   <td></td> </tr>
 </table>
