--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,11 +9,11 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">11,851</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">13,749</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.stockTests.NewsLetterTest</td><td><a href="#m0">getIcon</a></td><td rowspan="1">1662662963282</td><td rowspan="1">936</td></tr><tr class="passedeven"><td><a href="#m1">getnewsLetter</a></td><td rowspan="1">1662662964222</td><td rowspan="1">3245</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">com.stockTests.MarketsDropdownMenuTest</td><td><a href="#m0">getMarkets</a></td><td rowspan="1">1662679303109</td><td rowspan="1">2237</td></tr><tr class="passedeven"><td><a href="#m1">getWorldMarkets</a></td><td rowspan="1">1662679305348</td><td rowspan="1">1612</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">com.stockTests.NewsLetterTest#getIcon</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">com.stockTests.NewsLetterTest#getnewsLetter</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">com.stockTests.MarketsDropdownMenuTest#getMarkets</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">com.stockTests.MarketsDropdownMenuTest#getWorldMarkets</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
