--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="be6360">  <td>22/09/08 14:49:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewsLetterTest.getIcon()[pri:1, instance:com.stockTests.NewsLetterTest@64485a47]">getIcon</td> 
+<tr bgcolor="be6360">  <td>22/09/08 19:21:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MarketsDropdownMenuTest.getMarkets()[pri:0, instance:com.stockTests.MarketsDropdownMenuTest@64485a47]">getMarkets</td> 
   <td>main@508198356</td>   <td></td> </tr>
-<tr bgcolor="be6360">  <td>22/09/08 14:49:24</td>   <td>940</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="NewsLetterTest.getnewsLetter()[pri:1, instance:com.stockTests.NewsLetterTest@64485a47]">getnewsLetter</td> 
+<tr bgcolor="be6360">  <td>22/09/08 19:21:45</td>   <td>2239</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MarketsDropdownMenuTest.getWorldMarkets()[pri:0, instance:com.stockTests.MarketsDropdownMenuTest@64485a47]">getWorldMarkets</td> 
   <td>main@508198356</td>   <td></td> </tr>
-<tr bgcolor="6587f1">  <td>22/09/08 14:49:15</td>   <td>-7446</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.stockTests.NewsLetterTest@64485a47]">&gt;&gt;setUp</td> 
+<tr bgcolor="6587f1">  <td>22/09/08 19:21:33</td>   <td>-9610</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.stockTests.MarketsDropdownMenuTest@64485a47]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@508198356</td>   <td></td> </tr>
-<tr bgcolor="6587f1">  <td>22/09/08 14:49:27</td>   <td>4186</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.stockTests.NewsLetterTest@64485a47]">&lt;&lt;tearDown</td> 
+<tr bgcolor="6587f1">  <td>22/09/08 19:21:46</td>   <td>3853</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.stockTests.MarketsDropdownMenuTest@64485a47]">&lt;&lt;tearDown</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@508198356</td>   <td></td> </tr>
 </table>
