--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,12 +1,20 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="be6360">  <td>22/09/08 19:21:43</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MarketsDropdownMenuTest.getMarkets()[pri:0, instance:com.stockTests.MarketsDropdownMenuTest@64485a47]">getMarkets</td> 
-  <td>main@508198356</td>   <td></td> </tr>
-<tr bgcolor="be6360">  <td>22/09/08 19:21:45</td>   <td>2239</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="MarketsDropdownMenuTest.getWorldMarkets()[pri:0, instance:com.stockTests.MarketsDropdownMenuTest@64485a47]">getWorldMarkets</td> 
-  <td>main@508198356</td>   <td></td> </tr>
-<tr bgcolor="6587f1">  <td>22/09/08 19:21:33</td>   <td>-9610</td> <td>&nbsp;</td><td title="&gt;&gt;TestBase.setUp()[pri:0, instance:com.stockTests.MarketsDropdownMenuTest@64485a47]">&gt;&gt;setUp</td> 
+<tr bgcolor="6587f1">  <td>22/09/08 22:30:21</td>   <td>0</td> <td>&nbsp;</td><td title="&lt;&lt;Base.closingBrowser()[pri:0, instance:com.stockTests.SearchStockTest@a74868d]">&lt;&lt;closingBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@508198356</td>   <td></td> </tr>
-<tr bgcolor="6587f1">  <td>22/09/08 19:21:46</td>   <td>3853</td> <td>&nbsp;</td><td title="&lt;&lt;TestBase.tearDown()[pri:0, instance:com.stockTests.MarketsDropdownMenuTest@64485a47]">&lt;&lt;tearDown</td> 
+<tr bgcolor="be6360">  <td>22/09/08 22:30:20</td>   <td>-813</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchStockTest.companySymbolLookup()[pri:5, instance:com.stockTests.SearchStockTest@a74868d]">companySymbolLookup</td> 
+  <td>main@508198356</td>   <td></td> </tr>
+<tr bgcolor="be6360">  <td>22/09/08 22:29:48</td>   <td>-33124</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchStockTest.currentStockPrice()[pri:2, instance:com.stockTests.SearchStockTest@a74868d]">currentStockPrice</td> 
+  <td>main@508198356</td>   <td></td> </tr>
+<tr bgcolor="be6360">  <td>22/09/08 22:30:21</td>   <td>-14</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchStockTest.gainersLosers()[pri:6, instance:com.stockTests.SearchStockTest@a74868d]">gainersLosers</td> 
+  <td>main@508198356</td>   <td></td> </tr>
+<tr bgcolor="be6360">  <td>22/09/08 22:30:05</td>   <td>-16452</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchStockTest.neagativeSearchTest()[pri:4, instance:com.stockTests.SearchStockTest@a74868d]">neagativeSearchTest</td> 
+  <td>main@508198356</td>   <td></td> </tr>
+<tr bgcolor="be6360">  <td>22/09/08 22:29:57</td>   <td>-24409</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchStockTest.oneYearGraph()[pri:3, instance:com.stockTests.SearchStockTest@a74868d]">oneYearGraph</td> 
+  <td>main@508198356</td>   <td></td> </tr>
+<tr bgcolor="6587f1">  <td>22/09/08 22:29:12</td>   <td>-69674</td> <td>&nbsp;</td><td title="&gt;&gt;Base.openingBrowser()[pri:0, instance:com.stockTests.SearchStockTest@a74868d]">&gt;&gt;openingBrowser</td> 
 <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@508198356</td>   <td></td> </tr>
+<tr bgcolor="be6360">  <td>22/09/08 22:29:34</td>   <td>-47469</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="SearchStockTest.searchTest()[pri:1, instance:com.stockTests.SearchStockTest@a74868d]">searchTest</td> 
+  <td>main@508198356</td>   <td></td> </tr>
 </table>
